# file_encryptor

./: CMakeLists.txt
include/: decrypt.h  encrypt.h  keygen.h
src/: decrypt.c  encrypt.c  keygen.c  main.c
